--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@ Travel
     </div>
   </div>
    <div class="row">
-    <div class="col-md-6 col-md-offset-4">
+    <div class="col-md-6 col-md-offset-4 xtra">
       <p>we have 24*7 service</p>
     </div>
   </div>
   <div class="row" style="margin-top:50px">
     <div class="col-md-1 col-md-offset-2 ala">
-      <i class="fa fa-envelope fa-2x" style="margin-left:25px"></i><br>
+      <i class="fa fa-envelope fa-2x"></i><br>
       <p>someone@gmail.com</p>
     </div>
     <div class="col-md-1 col-md-offset-2 ala">
@@ -130,7 +130,7 @@ Travel
     </div>
     </div>
   <div class="row" style="margin-top:20px">
-    <div class="col-md-6 col-md-offset-4 grt">
+    <div class="col-md-8 col-md-offset-4 grt">
      <textarea row="50" col="50" type="text" placeholder="write your message"></textarea>
     </div>
   </div>
