--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@ Travel
 <div id="contact-us">
   <div class="row">
     <div class="col-md-4 col-md-offset-4 contact">
-       <h3 style="color:rgb(30,38,146)"> Send us a message</h3>
+       <h3 style="color:#16a085"> Send us a message</h3>
     </div>
   </div>
    <div class="row">
     <div class="col-md-6 col-md-offset-4 xtra">
-      <p>we have 24*7 service</p>
+      <p style="color:white">we have 24*7 service</p>
     </div>
   </div>
   <div class="row" style="margin-top:50px">
